2001-08-04 Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c (cb_end_process): changed SIGTERM to SIGKILL

	* procdialogs.c: likewise.

	* prettytable.c (prettytable_load_async): new function to get 
	the icons using a seperate thread.
	(thread_func): new function to actually load the icons within
	the thread.

	* interface.c (idle_func): call the new async functions to load
	icons

	* proctable.c (update_info): check to see if icon doesn't exist
	and if so try to find one. Not ideal in that it means we 
	constantly check for icons for processes that don't have them.

	* prettytable.h: remove unneeded stuf

	* procman.c (procman_data_new): change default "view as" to 
	my processes.

2001-08-04 Kevin Vandersloot <kfv101@psu.edu>

	First crack at delay loading icons.

	* interface.c (create_main_window): create an idle timer to delay 
	load the icons
	(idle_func): test the delay loading. Should probably create a
	thread to load the icons to prevent blocking

	* procman.c (procman_data_new): don't load icons here

Sat Aug  4 00:35:55 2001  Jonathan Blandford  <jrb@redhat.com>

	* interface.c (create_main_window): add an keyboard accelarators.

2001-08-03 Kevin Vandersloot <kfv101@psu.edu>

	* favorites.c (save_blacklist): fix memory leak
	(fill_tree_with_info): new function to fill the tree.
	(remove_item): remove the call to e_tree_memory_node_remove
	as that caused a segfault in e-tree that won't be fixed for
	Gal 1.0
	(remove_button_clicked): call the e-tree ForEach function so
	all selected processes are remove from the list. Then call
	fill_tree_with_info to clear the tree and repopulate.

	* memmaps.c (clear_memmaps): free the info->flags string to fix
	a memory leak.

	* procman.c (procman_free_data): free strings pointing to
	.etspec files. Fixes memory leak.

	* proctable.c (get_info): remove unused variable and some 
	unneeded comments

2001-08-03 Kevin Vandersloot <kfv101@psu.edu>

	* procman.h: add new gchar to ProcInfo structure for the command
	args
