@@ -1,5 +1,13 @@
 2001-08-04 Kevin Vandersloot <kfv101@psu.edu>
 
+	* procdialogs (create_pref_dialgo): comment out never_show_icons 
+	prefernece
+
+	* interface (create_main_window): make infobox above the buttons
+	at the bottom of window. Looks better to me 
+
+2001-08-04 Kevin Vandersloot <kfv101@psu.edu>
+
 	* callbacks.c (cb_end_process): changed SIGTERM to SIGKILL
 
 	* procdialogs.c: likewise.
